create and style questions page

--- a/html/question.html
+++ b/html/question.html
@@ -12,6 +12,41 @@
   />
 </head>
 <body>
-    
+  <div id="quiz-box">
+    <header>
+        <div class="title"> QUIZ APPLICATION</div>
+    </header>
+    <section>
+        <div class="que-test">
+            <span> What is your name ?</span>
+        </div>
+        <div class="option-list">
+            <div class="option">
+                <span>Lorem ipsum dolor sit amet</span>
+                <div class="icon"><ion-icon class="rigth" name="checkmark-outline"></ion-icon></div>
+            </div>
+            <div class="option">
+                <span>Lorem ipsum dolor sit amet</span>
+                <div class="wrong icon"><ion-icon name="close-outline"></ion-icon></div>
+            </div>
+            <div class="option">
+                <span>Lorem ipsum dolor sit amet</span>
+            </div>
+            <div class="option">
+                <span>Lorem ipsum dolor sit amet</span>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="total">
+            <span>
+                Question <p> 3</p> out of <p>10</p>
+            </span>
+        </div>
+        <button class="next-btn">NEXT</button>
+    </footer>
+</div>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
