edit the link of files relates #10

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <main>
@@ -27,9 +28,9 @@
             <ion-icon name="checkmark-outline"></ion-icon>
           </button>
         </fieldset>
-        <a href="">Get Start</a>
+        <a href="html/question.html">Get Start</a>
       </div>
-      <div><img src="/images/quiz Logo.PNG" alt="logo" /></div>
+      <div><img src="images/quiz Logo.PNG" alt="logo" /></div>
     </main>
     <script
       type="module"
