--- a/html/question.html
+++ b/html/question.html
@@ -47,6 +47,7 @@
         <button class="next-btn">NEXT</button>
     </footer>
 </div>
+<script src="../js/question.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
