--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             <ion-icon name="checkmark-outline"></ion-icon>
           </button>
         </fieldset>
+
         <a href="html/question.html">Get Start</a>
+        
       </div>
       <div><img src="images/quiz Logo.PNG" alt="logo" /></div>
     </main>
@@ -40,5 +42,6 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
