improvment qusetion page and fixing some cases relate #16

--- a/html/question.html
+++ b/html/question.html
@@ -24,17 +24,22 @@
         <div class="option-list">
             <div class="option">
                 <span>Lorem ipsum dolor sit amet</span>
-                <div class="icon"><ion-icon class="rigth" name="checkmark-outline"></ion-icon></div>
+                <div class="icon"></div>
             </div>
             <div class="option">
                 <span>Lorem ipsum dolor sit amet</span>
-                <div class="wrong icon"><ion-icon name="close-outline"></ion-icon></div>
+                <div class="icon"></div>
+
             </div>
             <div class="option">
                 <span>Lorem ipsum dolor sit amet</span>
+                <div class="icon"></div>
+
             </div>
             <div class="option">
                 <span>Lorem ipsum dolor sit amet</span>
+                <div class="icon"></div>
+
             </div>
         </div>
     </section>
