fixing style -related #22

--- a/html/question.html
+++ b/html/question.html
@@ -19,7 +19,7 @@
     </header>
     <section>
         <div class="que-test">
-            <span> What is your name ?</span>
+            <span class="qus active"> What is your name ?</span>
         </div>
         <div class="option-list">
             <div class="option">
