--- a/html/result.html
+++ b/html/result.html
@@ -17,11 +17,10 @@
         <div class="congrat-text">
             <img class="congratimage" src="../images/Capture.JPG" alt="sorry">
             <h1>congratulation</h1>
-            <p> your score is : <p class="userScore"></p></p>
+            <p> your score is : <p class="userScore"></p></p><br>
             <p>highest scores  is : <p class="highestScore"></p></p>
         </div>
     </main>
-    <script src="../js/question.js"></script>
 <script src="../js/result.js"></script>
 </body>
 </html>
